# fire-skills

./: .git-workflow.state.json  .gitignore  AGENTS-Basic.md  AGENTS.md  AI-Agent软件开发文档管理方案-Top20.docx  CLAUDE.md  DECOMPOSITION-PLAN.md  ICM论文深度分析报告.md  README.md  SKILL.md  SPEC.md  biome.json  clean-skills.ps1  clean-skills.sh  docmd.config.mjs  extract_pdf.py  find-skills.mjs  install-by-tag.ps1  install-by-tag.sh  mwp_paper_full_text.txt  package-lock.json  package.json  pnpm-lock.yaml  results.json  skill-spark-intro.md  tsconfig.json
.agents/skills/: gh-create-release  local-workflow  understand-anything
.claude/: settings.json
.claude/skills/: anysearch  gh-create-release  git-workflow  github-cli  local-workflow  scanning-for-secrets  skill-spark  (+1 more)
analysis/: README.md
art/: README.md
dev/: README.md  dev-workflow-install.ps1  dev-workflow-install.sh
docs/: Agents.md  README.md  devops-skills-usage.md  index.md  install-skills.md  openwiki-setup.md  scripts-usage.md
office-skills/: README.md
python-skills-runtime/: pyproject.toml
python-skills-runtime/src/skills_runtime/: __init__.py  cli.py  utils.py
scripts/: build-install.sh  dev-workflow.ps1  dev-workflow.sh  extract-skill.sh  install-base.sh  install-devops.sh  install.ps1  install.sh  remove.ps1  remove.sh  sync-subtrees.sh  update.ps1  update.sh
skill-eval/: README.md  frontend-skill-eval.md  innate-frontend-starter.md  package.json  project-constraints.md  skill-eval.test.ts  skill-eval.ts  summary.md
skills/: categories.json  index.json
src/: index.ts
tasks/: README.md  refactor.md
(+283 files in other folders)
