[project]
name = "python-skills-runtime"
version = "0.1.0"
description = "Global Python runtime environment for fire-skills"
requires-python = ">=3.10"
dependencies = [
    "markitdown[docx]>=0.1.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
]

[project.scripts]
skills-runtime = "skills_runtime.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skills_runtime"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
